参数接收的两种方式

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
  <h1>I'm a test page!</h1>
+<form action="/um/p1" method="post">
+    <input name="username"><br/>
+    <input name="password"><br/>
+    <input type="submit" value="提交">
+</form>
 </body>
 </html>
