时间转换，全局时间转换器

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
 <form action="/um/p1" method="post">
     <input name="username"><br/>
     <input name="password"><br/>
+    <input name="createTime"><br/>
     <input type="submit" value="提交">
 </form>
 </body>
